Clean up dependencies and project structure
- Remove git submodules, vendor Imath directly
- Update GitHub workflow files
- Update README badges and package URL

--- a/.github/workflows/swift-macos.yml
+++ b/.github/workflows/swift-macos.yml
@@ -18,4 +18,4 @@ jobs:
       - name: 🗃️ Checkout Submodules
         run: git submodule update --init --recursive
       - name: 📦 Build
-        run: swift build -c release --target MetaversalDemo
+        run: swift build -c release --target SwiftASWFDemo
