--- a/.github/workflows/swift-ubuntu.yml
+++ b/.github/workflows/swift-ubuntu.yml
@@ -34,4 +34,4 @@ jobs:
       - name: 🗃️ Checkout Submodules
         run: git submodule update --init --recursive
       - name: 📦 Build
-        run: swift build -c release --target MetaversalDemo
+        run: swift build -c release --target SwiftASWFDemo
