--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -45,7 +45,7 @@ jobs:
           swift package \
             --allow-writing-to-directory gh-pages/docs \
             generate-documentation \
-            --target MetaversalDemo \
+            --target SwiftASWFDemo \
             --disable-indexing \
             --transform-for-static-hosting \
             --output-path gh-pages/docs
