Fix OneTBB include paths and Swift interop compatibility
- Fix tbb.h umbrella header to use relative includes (tbb/...) instead of oneapi/tbb/...
- Update OpenSubdiv umbrella header for Swift module builds
- Clean up Apple framework headers
- Update MicrosoftSTL for cross-platform compatibility
- Add .gitignore entry for build artifacts

--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Compile Docs
         run: |
           set -eux
-          git config user.email "devs@wabi.foundation"
+          git config user.email "hello@athem.io"
           git config user.name "furby™"
           git fetch
           git worktree add --checkout gh-pages origin/gh-pages
